companion-backend/deployments/kubernetes/mongo-companion-backend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-companion-backend
  name: mongo-companion-backend
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo-companion-backend
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          value: "mongouser"
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: "mongopass"
        image: mongo:4.0.9
        name: mongo-companion-backend
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-companion-backend
  name: mongo-companion-backend
spec:
  type: NodePort
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: mongo-companion-backend
status:
  loadBalancer: {}
