companion-backend/deployments/kubernetes/mysql-companion-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-companion-backend
    #app: mysql-companion-backend
  name: mysql-companion-backend
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: mysql-companion-backend
  template:
    metadata:
      labels:
        app: mysql-companion-backend
        io.kompose.service: mysql-companion-backend
    spec:
      containers:
        - env:
          - name: MYSQL_ROOT_PASSWORD
            value: "1234"
          - name: MYSQL_DATABASE
            value: "mytrac"
          - name: TZ
            value: Europe/Madrid
          image: mysql:5.7.23
          args:
            - "--ignore-db-dir=lost+found"
          name: mysql-companion-backend
          ports:
          - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volumeclaim

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-companion-backend
  name: mysql-companion-backend
spec:
  type: NodePort
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: mysql-companion-backend
status:
  loadBalancer: {}
