companion-backend/deployments/kubernetes/mytrac-webapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mytrac-webapp-container
  name: mytrac-webapp-container
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mytrac-webapp-container
    spec:
      containers:
      - name: mytrac-webapp-container
        image: sparsitytechnologies/mytrac-webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: deploy-conf
          mountPath: /root/conf
          readOnly: true
      volumes:
        - name: deploy-conf
          secret:
            secretName: deploy-conf
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/maguila/gopath/src/github.com/kubernetes/kompose/kompose convert
    kompose.version: 1.18.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mytrac-webapp-container
  name: mytrac-webapp-container
spec:
  type: NodePort
  ports:
  - name: webapp-server
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: mytrac-webapp-container
status:
  loadBalancer: {}
